@@ -320,6 +320,7 @@ extern AVFilter ff_vf_minterpolate;
 extern AVFilter ff_vf_mix;
 extern AVFilter ff_vf_monochrome;
 extern AVFilter ff_vf_mpdecimate;
+extern AVFilter ff_vf_msad;
 extern AVFilter ff_vf_negate;
 extern AVFilter ff_vf_nlmeans;
 extern AVFilter ff_vf_nlmeans_opencl;
