@@ -80,6 +80,7 @@ version <next>:
 - Digital Pictures SGA demuxer and decoders
 - TTML subtitle encoder and muxer
 - identity video filter
+- msad video filter
 
 
 version 4.3:
